# Simulacion-TP6

./: README.md  pyproject.toml  requirements.txt  test.ipynb
data/: simulation_results.csv
notebooks/: fit.ipynb  fit_pdf.ipynb  sample.ipynb  simulation.ipynb
