[tool.poetry]
name = "simulation"
version = "0.1.0"
description = "Simulations Assignment"
authors = ["Tomas Sanchez <tosanchez@frba.utn.edu.ar>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simulation", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pydantic = "^2.9.1"
typer = "^0.12.5"
fitter = "^1.7.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"
pytest = "^8.3.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
